syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service User{
  rpc GetUserList(PageInfo) returns (UserListResponse); //用户列表
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); //通过手机号查询用户
  rpc GetUserById(IdRequest) returns (UserInfoResponse); //通过id查询用户
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); //添加用户
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); //更新用户
  rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse); //检查密码
}

message PasswordCheckInfo{
  string passWord = 1;     //传入的密码
  string encryptedPassword = 2;  //加盐后的密码
}

message CheckResponse{
  bool success = 1;    //验证密码是否成功
}

message PageInfo{
  uint32 pn = 1; //页码
  uint32 pSize = 2; //一页多少条数据
}

message MobileRequest{
  string mobile = 1;
}

message IdRequest{
  int32 id = 1;
}

message CreateUserInfo{
  string nickName = 1;
  string passWord = 2;
  string mobile = 3;
}

message UpdateUserInfo{
  int32 id = 1;
  string nickName = 2;
  string gender = 3;
  uint64 birthday = 4;
}

message UserInfoResponse{
  int32 id = 1;
  string passWord = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthDay = 5;
  string gender = 6;
  int32 role = 7;
}

message UserListResponse{
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}